# source_app

./: .gitignore  README.md  pyproject.toml  pytest.ini
source/: client_telem.py  main.py  my_app.py  server.py
tests/: dummy.py  test_source.py
