[tool.poetry]
name = "source"
version = "0.1.0"
description = ""
authors = ["maly <swampinhabitant@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
