[tool.poetry]
name = "source"
version = "0.1.0"
description = ""
authors = ["maly <swampinhabitant@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
icecream = "^2.1.3"
requests = "^2.31.0"
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
